--- a/app/src/main/res/drawable-v24/card_background.xml
+++ b/app/src/main/res/drawable-v24/card_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <corners android:radius="10dp" />
-    <gradient android:startColor="@color/white" android:centerColor="@color/white" android:endColor="@color/white"/>
+<!--    <gradient android:startColor="@color/white" android:centerColor="@color/white" android:endColor="@color/white"/>-->
 
     <stroke android:width="1dp" android:color="#A3A3A3"/>
 
