--- a/app/src/main/res/layout/fragment_id_ve_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_id_ve_bottom_sheet.xml
@@ -3,10 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="435dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/white"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
     tools:context=".view.IdentityVerificationActivity">
 
     <LinearLayout
@@ -16,14 +14,14 @@
         android:orientation="vertical"
         android:paddingBottom="30dp">
 
-        <androidx.cardview.widget.CardView
+        <View
             android:layout_width="@dimen/_80sdp"
             android:layout_height="@dimen/_3sdp"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_15sdp"
             app:cardBackgroundColor="@color/primary_color"
             app:cardCornerRadius="@dimen/_1sdp"
-            android:background="@color/primary_color"
+            android:background="@drawable/button_background"
             />
 
     </LinearLayout>
@@ -124,7 +122,7 @@
                 android:text="@string/pptext"
                 android:textColor="@color/primary_black"
 
-                android:textSize="@dimen/_16ssp" />
+                android:textSize="@dimen/_12ssp" />
 
             <ImageView
                 android:id="@+id/rightarrowbtnpp"
@@ -178,7 +176,7 @@
                 android:text="@string/sic"
                 android:textColor="@color/primary_black"
 
-                android:textSize="@dimen/_16ssp" />
+                android:textSize="@dimen/_12ssp" />
 
             <ImageView
                 android:id="@+id/rightarrowbtnsic"
