--- a/app/src/main/res/drawable/arc_shape.xml
+++ b/app/src/main/res/drawable/arc_shape.xml
@@ -6,7 +6,8 @@
     <item android:top="230dp"
         android:bottom="-350dp"
         android:left="-200dp"
-        android:right="-200dp">
+        android:right="-200dp"
+        >
         <rotate
             android:fromDegrees="-0"
             android:pivotX="0%"
@@ -14,7 +15,7 @@
             <shape
                 android:shape="oval">
                 <solid
-                    android:color="?android:colorBackground"
+                    android:color="@color/white"
                     tools:targetApi="lollipop" />
             </shape>
         </rotate>
