--- a/app/src/main/res/layout/fragment_id_ve_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_id_ve_bottom_sheet.xml
@@ -9,8 +9,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
+        android:layout_height="@dimen/_44sdp"
+
         android:orientation="vertical"
         android:paddingBottom="30dp">
 
@@ -20,7 +20,6 @@
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_15sdp"
             app:cardBackgroundColor="@color/primary_color"
-            app:cardCornerRadius="@dimen/_1sdp"
             android:background="@drawable/button_background"
             />
 
@@ -34,6 +33,7 @@
         android:text="@string/contentidtype"
         android:textColor="@color/black"
         android:textSize="@dimen/_16ssp"
+        android:layout_marginBottom="@dimen/_14sdp"
         />
 
     <LinearLayout
@@ -199,7 +199,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="78dp"
+        android:layout_height="@dimen/_48sdp"
         android:orientation="horizontal">
 
         <LinearLayout
