--- a/app/src/main/res/layout/activity_enable_auth_id.xml
+++ b/app/src/main/res/layout/activity_enable_auth_id.xml
@@ -296,7 +296,8 @@
                     android:fontFamily="@font/opensans_regular"
                     android:text="You’re almost there! Before you can start tokenizing your money. Please follow the instructions below."
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="@dimen/_12ssp"
+                    android:gravity="center"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -388,7 +389,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
-                    android:text="Not Now"
+                    android:text="Skip"
                     android:textColor="@color/primary_color"
                     android:textSize="@dimen/_12ssp" />
             </LinearLayout>
