--- a/app/src/main/res/layout/activity_otpvalidation.xml
+++ b/app/src/main/res/layout/activity_otpvalidation.xml
@@ -169,6 +169,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="Next"
+                android:fontFamily="@font/opensans_bold"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12ssp"
                 android:textStyle="bold" />
