--- a/app/src/main/res/layout/activity_quick_action.xml
+++ b/app/src/main/res/layout/activity_quick_action.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_252sdp"
     android:background="@drawable/bg_core"
@@ -36,7 +34,7 @@
             android:layout_marginLeft="@dimen/_9sdp"
             android:fontFamily="@font/opensans_semibold"
             android:text="Scan"
-            android:textColor="@color/black"
+            android:textColor="@color/primary_black"
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
 
@@ -107,7 +105,6 @@
             android:src="@drawable/ic_buy_icon" />
 
         <TextView
-            android:id="@+id/clickTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_6sdp"
