--- a/app/src/main/res/layout/activity_addnewdebit_card.xml
+++ b/app/src/main/res/layout/activity_addnewdebit_card.xml
@@ -121,85 +121,88 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <com.greenbox.coyni.utils.outline_et.CardNumberEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content" />
+<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content">-->
 
-                <LinearLayout
-                    android:id="@+id/hintdHolderLL"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:background="@drawable/outline_box_unfocused"
-                    android:paddingTop="@dimen/_12sdp"
-                    android:paddingBottom="@dimen/_12sdp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/_25sdp"
-                        android:layout_marginStart="@dimen/_15sdp"
-                        android:gravity="center"
-                        android:orientation="horizontal">
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/hintdHolderLL"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="@dimen/_10sdp"-->
+<!--                    android:background="@drawable/outline_box_unfocused"-->
+<!--                    android:paddingTop="@dimen/_12sdp"-->
+<!--                    android:paddingBottom="@dimen/_12sdp"-->
+<!--                    app:layout_constraintLeft_toLeftOf="parent"-->
+<!--                    app:layout_constraintRight_toRightOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent">-->
 
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_disable_visa"
-                            android:layout_marginEnd="@dimen/_7sdp"
-                            />
-
-                        <View
-                            android:layout_width="1.5dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginStart="5dp"
-                            android:background="@color/light_gray" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/_6sdp"
-                            android:fontFamily="@font/opensans_regular"
-                            android:text="XXXX XXXX XXXX XXXX"
-                            android:textColor="#c5c5c5"
-                            android:textSize="@dimen/_12ssp" />
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="@dimen/_25sdp"-->
+<!--                        android:layout_marginStart="@dimen/_15sdp"-->
+<!--                        android:gravity="center"-->
+<!--                        android:orientation="horizontal">-->
 
 
-                    </LinearLayout>
+<!--                        <ImageView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:src="@drawable/ic_disable_visa"-->
+<!--                            android:layout_marginEnd="@dimen/_7sdp"-->
+<!--                            />-->
+
+<!--                        <View-->
+<!--                            android:layout_width="1.5dp"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:layout_marginStart="5dp"-->
+<!--                            android:background="@color/light_gray" />-->
+
+<!--                        <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginLeft="@dimen/_6sdp"-->
+<!--                            android:fontFamily="@font/opensans_regular"-->
+<!--                            android:text="XXXX XXXX XXXX XXXX"-->
+<!--                            android:textColor="#c5c5c5"-->
+<!--                            android:textSize="@dimen/_12ssp" />-->
 
 
-                </LinearLayout>
+<!--                    </LinearLayout>-->
 
-                <TextView
-                    android:id="@+id/hintTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@android:color/white"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:paddingStart="4dp"
-                    android:paddingEnd="4dp"
-                    android:text="Card Number"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp"
-                    app:layout_constraintBottom_toTopOf="@+id/hintdHolderLL"
-                    app:layout_constraintStart_toStartOf="@+id/hintdHolderLL"
-                    app:layout_constraintTop_toTopOf="@+id/hintdHolderLL" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_9sdp"
-                    android:src="@drawable/ic_camera"
-                    app:layout_constraintBottom_toBottomOf="@+id/hintdHolderLL"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/hintdHolderLL" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+<!--                </LinearLayout>-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/hintTV"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginStart="12dp"-->
+<!--                    android:layout_marginTop="8dp"-->
+<!--                    android:background="@android:color/white"-->
+<!--                    android:fontFamily="@font/opensans_semibold"-->
+<!--                    android:paddingStart="4dp"-->
+<!--                    android:paddingEnd="4dp"-->
+<!--                    android:text="Card Number"-->
+<!--                    android:textColor="@color/primary_black"-->
+<!--                    android:textSize="@dimen/_12ssp"-->
+<!--                    app:layout_constraintBottom_toTopOf="@+id/hintdHolderLL"-->
+<!--                    app:layout_constraintStart_toStartOf="@+id/hintdHolderLL"-->
+<!--                    app:layout_constraintTop_toTopOf="@+id/hintdHolderLL" />-->
+
+<!--                <ImageView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="@dimen/_9sdp"-->
+<!--                    android:src="@drawable/ic_camera"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@+id/hintdHolderLL"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="@+id/hintdHolderLL" />-->
+<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
 
 
             <LinearLayout
